k8s-apps/utilities/paperless/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/part-of: documents
    app.kubernetes.io/managed-by: argocd
